<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_category_general"
                app:cc_collapsible="false">

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_language"
                    android:subtitle="@string/settings_language_summary"
                    android:text="@string/settings_language_title" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_hugepage_reserve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_card_multiple"
                    android:subtitle="@string/hugepage_subtitle"
                    android:text="@string/hugepage_title" />

            </cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer>

            <cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_category_vm"
                app:cc_collapsible="false">

                <cn.classfun.droidvm.ui.widgets.row.SwitchRowWidget
                    android:id="@+id/item_vm_auto_console"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_terminal"
                    android:subtitle="@string/settings_vm_auto_console_summary"
                    android:text="@string/settings_vm_auto_console_title" />

                <cn.classfun.droidvm.ui.widgets.row.SwitchRowWidget
                    android:id="@+id/item_vm_clear_logs_before_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_logs"
                    android:subtitle="@string/settings_vm_clear_logs_before_start_summary"
                    android:text="@string/settings_vm_clear_logs_before_start_title" />

            </cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer>

            <cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_category_daemon"
                app:cc_collapsible="false">

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_daemon_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_server"
                    android:subtitle="@string/settings_daemon_checking"
                    android:text="@string/settings_daemon_status_title" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_daemon_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_start"
                    android:subtitle="@string/settings_daemon_start_summary"
                    android:text="@string/settings_daemon_start" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_daemon_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_stop"
                    android:subtitle="@string/settings_daemon_stop_summary"
                    android:text="@string/settings_daemon_stop" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_daemon_restart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_refresh"
                    android:subtitle="@string/settings_daemon_restart_summary"
                    android:text="@string/settings_daemon_restart" />

            </cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer>

            <cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_category_update"
                app:cc_collapsible="false">

                <cn.classfun.droidvm.ui.widgets.row.SwitchRowWidget
                    android:id="@+id/item_auto_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_refresh_auto"
                    android:subtitle="@string/settings_auto_check_update_summary"
                    android:text="@string/settings_auto_check_update_title" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_download_box"
                    android:subtitle="@string/settings_check_update_summary"
                    android:text="@string/settings_check_update_title" />

            </cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer>

            <cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/settings_category_about"
                app:cc_collapsible="false">

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_bug"
                    android:subtitle="@string/settings_feedback_summary"
                    android:text="@string/settings_feedback_title" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_license"
                    android:subtitle="@string/settings_license_summary"
                    android:text="@string/settings_license_title" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_shield"
                    android:subtitle="@string/settings_privacy_summary"
                    android:text="@string/settings_privacy_title" />

                <cn.classfun.droidvm.ui.widgets.row.TextRowWidget
                    android:id="@+id/item_api_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_server"
                    android:subtitle="@string/settings_api_manager_summary"
                    android:text="@string/settings_api_manager_title" />

            </cn.classfun.droidvm.ui.widgets.container.CollapsibleContainer>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
